--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: #1D1E22;
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
